# sat-solver-algo

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
benchmark/2nf/: 01-2-nf-300-var-1000-cls.cnf  01-2-nf-300-var-1500-cls.cnf  01-2-nf-300-var-2000-cls.cnf  01-2-nf-300-var-2500-cls.cnf  01-2-nf-300-var-3000-cls.cnf  01-2-nf-300-var-3500-cls.cnf  01-2-nf-300-var-4000-cls.cnf
benchmark/3nf/: 01-3-nf-300-var-1000-cls.cnf  01-3-nf-300-var-1500-cls.cnf  01-3-nf-300-var-2000-cls.cnf  01-3-nf-300-var-2500-cls.cnf  01-3-nf-300-var-3000-cls.cnf  01-3-nf-300-var-3500-cls.cnf  01-3-nf-300-var-4000-cls.cnf
benchmark/4nf/: 01-4-nf-300-var-1000-cls.cnf  01-4-nf-300-var-1500-cls.cnf  01-4-nf-300-var-2000-cls.cnf  01-4-nf-300-var-2500-cls.cnf  01-4-nf-300-var-3000-cls.cnf  01-4-nf-300-var-3500-cls.cnf  01-4-nf-300-var-4000-cls.cnf
cmake/modules/: SetOutputDirs.cmake  UTF8Encoding.cmake
src/: CMakeLists.txt  clause.h  heap.h  main.cpp  opstack.h  solver.cpp  solver.h
